<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/dashboardFragment"
        android:title="@string/dashboard"
        android:icon="@drawable/ic_baseline_dashboard_24" />
    <item
        android:id="@+id/cardsFragment"
        android:title="@string/cards"
        android:icon="@drawable/ic_baseline_credit_card_24" />
    <item
        android:id="@+id/expensesFragment"
        android:title="@string/expenses"
        android:icon="@drawable/ic_baseline_attach_money_24" />
    <item
        android:id="@+id/profileFragment"
        android:title="@string/my_account"
        android:icon="@drawable/ic_baseline_person_24" />
    <item
        android:id="@+id/settingsFragment"
        android:title="@string/settings"
        android:icon="@drawable/ic_baseline_settings_24" />
</menu>